<resources>
    <string name="app_name">MyCar</string>
    <string name="menu_myCars">My Cars</string>
    <string name="menu_add_car">Add new car</string>
    <string name="menu_notes">My notes</string>
    <string name="menu_tools">Tools</string>


    <string-array name="spinner_cars">
        <item>Kia Sorento</item>
        <item>Add new car</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_date">Enter date and time</string>
    <string name="cost">Cost</string>
    <string name="quantity">Quantity</string>
    <string name="mileage">Mileage</string>
    <string name="ok">OK</string>
    <string name="clear">Clear</string>
    <string name="comments">Enter your comments</string>
    <string name="fuels_list">My Fuels List</string>
    <string name="services_list">My Services List</string>
    <string name="events">Events</string>
    <string name="mark">Mark</string>
    <string name="model">Model</string>
    <string name="year_of_issue">Year of issue</string>
    <string name="type_transmission">Type transmission</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="type_engine">Type engine</string>
    <string name="vin">VIN</string>
    <string name="title_activity_page">Page</string>
    <string name="type_service">Type service</string>
    <string name="name_service">Enter name service</string>
    <string name="work_or_detail">Work or detail</string>
    <string name="add_car">Add car</string>
    <string name="update">Update</string>
    <string name="fuel">Fuel</string>
</resources>
