<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_directions_car_black_24dp"
            android:title="@string/menu_myCars" >
            <spinner>

            </spinner>
        </item>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_library_notes_black_24dp"
            android:title="@string/menu_notes" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_tools" />
    </group>
</menu>
