<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="filippov.vitaliy.poibms3_8.ui.home.HomeFragment"
        android:label="@string/menu_myCars"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="filippov.vitaliy.poibms3_8.ui.gallery.GalleryFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="filippov.vitaliy.poibms3_8.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

</navigation>