<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.tools.ToolsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/type_service"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_settings_black_24dp" />

            <Spinner
                android:id="@+id/edit_event_category"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="200dp"
                android:hint="@string/type_service"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edit_event_date"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/name_service"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

            <EditText
                android:id="@+id/type_fuel"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="200dp"
                android:hint="@string/name_service"
                android:inputType="text"
                android:padding="5dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/name_service"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_device_hub_black_24dp" />

            <EditText
                android:id="@+id/volume_fuel"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="200dp"
                android:hint="@string/work_or_detail"
                android:inputType="text"
                android:padding="5dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/enter_date"
                android:padding="5dp"
                android:paddingEnd="0dp"
                app:srcCompat="@drawable/ic_attach_money_black_24dp" />

            <EditText
                android:id="@+id/cost_fuel"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="200dp"
                android:hint="@string/cost"
                android:inputType="number|numberDecimal"
                android:padding="5dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/enter_date"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_near_me_black_24dp" />

            <EditText
                android:id="@+id/mileage"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="200dp"
                android:hint="@string/mileage"
                android:inputType="number"
                android:padding="5dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="10dp"
                android:contentDescription="@string/enter_date"
                android:padding="5dp"
                app:srcCompat="@drawable/ic_mode_edit_black_24dp" />

            <EditText
                android:id="@+id/comment"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginVertical="10dp"
                android:layout_marginEnd="10dp"
                android:autofillHints="200dp"
                android:hint="@string/comments"
                android:inputType="textLongMessage"
                android:padding="5dp"
                android:text=""
                android:textAlignment="viewStart"
                android:textSize="18sp"
                android:textStyle="normal"
                android:typeface="normal" />
        </LinearLayout>

        <fragment
            android:id="@+id/date_fragment"
            android:name="filippov.vitaliy.poibms3_8.ui.date.DateFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date_fragment">

            <Button
                android:id="@+id/clear"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:text="@string/clear" />

            <Button
                android:id="@+id/ok"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:text="@string/ok" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>